new html Issue number: Obtained from: Submitted by: Reviewed by:
git-svn-id: https://svn.java.net/svn/glazedlists~svn/trunk@132 696c4f5c-992c-4387-df9e-f6c076136008

--- a/www/demo.html
+++ b/www/demo.html
@@ -1,8 +1,9 @@
 <html>
 <head><title>Programming Language Browser Demo</title></head>
 <body>
+<div class="app">
 
-<p><h3>Programming Language Browser Demo</h3>
+<h1>Programming Language Browser Demo</h1>
 
 <p>The programming language browser is a very simple application that
 demonstrates Glazed Lists' filtering, sorting and custom renderers.
@@ -25,4 +26,4 @@ This is the project constructed in the <a href="/tutorial/index.html">tutorial</
     </comment>
 </object>
 
-</body></html>
+</div></body></html>
