added 'releases' Issue number: Obtained from: Submitted by: Reviewed by:
git-svn-id: https://svn.java.net/svn/glazedlists~svn/trunk@159 696c4f5c-992c-4387-df9e-f6c076136008

--- a/www/index.html
+++ b/www/index.html
@@ -42,5 +42,11 @@
   <li><a href="mailto:users@glazedlists.dev.java.net">Mailing List</a> - questions posted to the users list will be answered promptly.
 </ul>
 
+<p><h3>Releases</h3>
+<ul>
+  <li><a href="/glazedlists-0.8/index.html">Glazed Lists 0.8</a> - released April 15, 2004. This is the first formal release of 
+  Glazed Lists. It is the final release of Glazed Lists to use the <code>com.odellengineeringltd.glazedlists</code> package.
+  This release will be available until April 15, 2005. No maintenance updates to this release are planned.
+</ul>
 
 </body></html>
