new screenshot! Issue number: Obtained from: Submitted by: Reviewed by:
git-svn-id: https://svn.java.net/svn/glazedlists~svn/trunk@161 696c4f5c-992c-4387-df9e-f6c076136008

--- a/www/sightings/index.html
+++ b/www/sightings/index.html
@@ -3,15 +3,19 @@
 <body>
 <div class="app">
 
-
 <h1>Glazed Lists Sightings</h1>
 <p>This is a showcase of what is possible with Glazed Lists. If you have an
 application that we can feature here please let us know via our 
 <a href="mailto:users@glazedlists.dev.java.net?subject=Glazed Lists Sightings">users mailing list</a>.
 
+<p><h3>AutoFocus Personal</h3>
+<p><a href="autofocus.png"><img src="autofocus-small.png" width="400" height="335" alt="AutoFocus Personal" align="center" border="3"></a>
+<p><a href="http://aduna.biz/products/autofocus/personal/index.html">AutoFocus Personal</a> searches within your Office, PDF, XML and HTML documents.
+Query results include cluster maps which exploit similarities in your documents. Download a free 30 day trial to see how AutoFocus can
+reduce your information overload.
 
 <p><h3>Jobs: The O'Dell Business System</h3>
-<p><a href=""><a href="jobs.png"><img src="jobs-small.png" width="400" height="238" alt="Jobs: The O'Dell Business System" align="center" border="3"></a>
+<p><a href="jobs.png"><img src="jobs-small.png" width="400" height="238" alt="Jobs: The O'Dell Business System" align="center" border="3"></a>
 <p><a href="http://www.odellengineeringltd.com/">O'Dell Engineering Ltd.</a>'s J2EE business management system is Jobs.
 This is the application that Glazed Lists was created for! It uses Glazed Lists almost everywhere to manage
 lists of contacts, tasks and products. 
