changed methods inside the assembler, that impacted everything! Issue number: Obtained from: Submitted by: Reviewed by:
git-svn-id: https://svn.java.net/svn/glazedlists~svn/trunk@170 696c4f5c-992c-4387-df9e-f6c076136008

--- a/www/glazedlists-0.9/index.html
+++ b/www/glazedlists-0.9/index.html
@@ -74,7 +74,13 @@ consistent with J2SE, and fewer public classes.
 </code></td></tr>
 
 <tr><td valign="top"><code>ListChangeSequence()</code></td>
-<td valign="top"><code>ListEventFactory(EventList sourceList)</code></td></tr>
+<td valign="top"><code>ListEventAssember(EventList sourceList)</code></td></tr>
+
+<tr><td valign="top"><code>ListChangeSequence.appendChange(int index, int type)</code></td>
+<td valign="top"><code>ListEventAssembler.addChange(int type, int index)</code></td></tr>
+
+<tr><td valign="top"><code>ListChangeSequence.appendChange(int index, int startIndex, int endIndex)</code></td>
+<td valign="top"><code>ListEventAssembler.addChange(int type, int startIndex, int endIndex)</code></td></tr>
 
 <tr><td valign="top"><code>ListChangeListenerEventThreadProxy</code></td>
 <td valign="top"><code>EventThreadProxy</code></td></tr>
