--- a/www/index.html
+++ b/www/index.html
@@ -45,9 +45,11 @@
 
 <p><h3>Releases</h3>
 <ul>
-  <li><a href="/glazedlists-0.8/index.html">Glazed Lists 0.8</a> - released April 15, 2004. This is the first formal release of 
-  Glazed Lists. It is the final release of Glazed Lists to use the <code>com.odellengineeringltd.glazedlists</code> package.
-  This release will be available until April 15, 2005. No maintenance updates to this release are planned.
+  <li><a href="/glazedlists-0.8/index.html">Glazed Lists 0.8.1</a> - released May 28, 2004. 
+  This is a maintenance release of Glazed Lists 0.8. Glazed Lists 0.8 is the
+  final release of Glazed Lists to use the <code>com.odellengineeringltd.glazedlists</code> package.
+  This release will be available until May 28, 2005. No further maintenance updates to this release
+  are planned.
 </ul>
 
 </body></html>
