moved iterator for the last time, renamed *Field* methods in TableFormat to *Column* methods
Issue number:  20
Obtained from:
Submitted by:
Reviewed by:


git-svn-id: https://svn.java.net/svn/glazedlists~svn/trunk@194 696c4f5c-992c-4387-df9e-f6c076136008

--- a/www/glazedlists-0.9/index.html
+++ b/www/glazedlists-0.9/index.html
@@ -87,6 +87,22 @@ consistent with J2SE, and fewer public classes.
 
 <tr><td valign="top"><code>ListChangeListenerWeakReferenceProxy</code></td>
 <td valign="top"><code>WeakReferenceProxy</code></td></tr>
+
+<tr><td valign="top"><code>TableFormat.getFieldCount()</code></td>
+<td valign="top"><code>TableFormat.getColumnCount()</code></td></tr>
+
+<tr><td valign="top"><code>TableFormat.getFieldName()</code></td>
+<td valign="top"><code>TableFormat.getColumnName()</code></td></tr>
+
+<tr><td valign="top"><code>TableFormat.getFieldValue()</code></td>
+<td valign="top"><code>TableFormat.getColumnValue()</code></td></tr>
+
+<tr><td valign="top"><code>WritableTableFormat.isFieldEditable()</code></td>
+<td valign="top"><code>WritableTableFormat.isColumnEditable()</code></td></tr>
+
+<tr><td valign="top"><code>WritableTableFormat.setFieldValue()</code></td>
+<td valign="top"><code>WritableTableFormat.setColumnValue()</code></td></tr>
+
 </table>
 
 
