made more stuff final Issue number: 20 Obtained from: Submitted by: Reviewed by:
git-svn-id: https://svn.java.net/svn/glazedlists~svn/trunk@197 696c4f5c-992c-4387-df9e-f6c076136008

--- a/www/glazedlists-0.9/index.html
+++ b/www/glazedlists-0.9/index.html
@@ -103,6 +103,17 @@ consistent with J2SE, and fewer public classes.
 <tr><td valign="top"><code>WritableTableFormat.setFieldValue()</code></td>
 <td valign="top"><code>WritableTableFormat.setColumnValue()</code></td></tr>
 
+<tr><td valign="top"><code>Filterable</code></td>
+<td valign="top"><code>TextFilterable</code></td></tr>
+
+<tr><td valign="top"><code>Filterator</code></td>
+<td valign="top"><code>TextFilterator</code></td></tr>
+
+<tr><td valign="top"><code>CaseInsensitiveFilterList</code></td>
+<td valign="top"><code>TextFilterList</code></td></tr>
+
+<tr><td valign="top"><code>CharacteristicList</code></td>
+<td valign="top"><code>TransformationList</code></td></tr>
 </table>
 
 
