deprecated ALL of migrationkit Issue number: 20 Obtained from: Submitted by: Reviewed by:
git-svn-id: https://svn.java.net/svn/glazedlists~svn/trunk@203 696c4f5c-992c-4387-df9e-f6c076136008

--- a/www/glazedlists-0.9/index.html
+++ b/www/glazedlists-0.9/index.html
@@ -68,10 +68,8 @@ consistent with J2SE, and fewer public classes.
 <tr><td valign="top"><code>ListChangeListener</code></td>
 <td valign="top"><code>ListEventListener</code></td></tr>
 
-<tr><td valign="top"><code>public void notifyListChanges(ListEvent listChanges);
-</code></td>
-<td valign="top"><code>public void listChanged(ListEvent listChanges);
-</code></td></tr>
+<tr><td valign="top"><code>ListChangeListener.notifyListChanges(ListEvent listChanges);</code></td>
+<td valign="top"><code>ListEventListener.listChanged(ListEvent listChanges);</code></td></tr>
 
 <tr><td valign="top"><code>ListChangeSequence()</code></td>
 <td valign="top"><code>ListEventAssember(EventList sourceList)</code></td></tr>
