--- a/www/demo.html
+++ b/www/demo.html
@@ -12,13 +12,13 @@ This is the project constructed in the <a href="/tutorial/index.html">tutorial</
 <p><object classid="clsid:CAFEEFAC-0014-0002-0000-ABCDEFFEDCBA"
     codebase="http://java.sun.com/products/plugin/autodl/jinstall-1_4_2-windows-i586.cab#Version=1,4,2,0"
     width="400" height="300">
-    <param name="code" value="com.odellengineeringltd.glazedlists.demo.ProgrammingLanguageBrowser">
+    <param name="code" value="ca.odell.glazedlists.demo.ProgrammingLanguageBrowser">
     <param name="archive" value="/files/documents/1073/1671/glazedlists.jar">
     <param name="type" value="application/x-java-applet;jpi-version=1.4.2">
 
     <comment>
         <embed type="application/x-java-applet;jpi-version=1.4.2"
-            code="com.odellengineeringltd.glazedlists.demo.ProgrammingLanguageBrowser"
+            code="ca.odell.glazedlists.demo.ProgrammingLanguageBrowser"
             archive="/files/documents/1073/1671/glazedlists.jar" width="400" height="300" scriptable="false"
             pluginspage="http://java.sun.com/products/plugin/index.html#download">
             <noembed></noembed>
