changed mutate to transform Issue number: Obtained from: Submitted by: Reviewed by:
git-svn-id: https://svn.java.net/svn/glazedlists~svn/trunk@208 696c4f5c-992c-4387-df9e-f6c076136008

--- a/www/glazedlists-0.9/index.html
+++ b/www/glazedlists-0.9/index.html
@@ -10,9 +10,9 @@ and more flexible than previous releases. It has a new concurrency model and a s
 <h3>Overview</h3>
 <p>Glazed Lists is an application of the <a href="http://en.wikipedia.org/wiki/Decorator_pattern">Decorator</a>
 and <a href="http://en.wikipedia.org/wiki/Observer_pattern">Observer</a> patterns over Java Lists. It provides
-mutated views of a source list that respond to changes as they occur. These views can be layered to provide simple and
+transforming views of a source list that respond to changes as they occur. These views can be layered to provide simple and
 powerful manipulation of the source data.
-<p>It includes mutating views for the following tasks:
+<p>It includes transforming views for the following tasks:
 <li><code>SortedList</code> presents a sorted view of a source list
 <li><code>AbstractFilterList</code> presents a filtered list containing a subset of a source list
 <li><code>UniqueList</code> presents a unique view of a source list
