added links between tutorials Issue number:  49 Obtained from: Submitted by: Reviewed by:
git-svn-id: https://svn.java.net/svn/glazedlists~svn/trunk@220 696c4f5c-992c-4387-df9e-f6c076136008

--- a/www/tutorial-0.9/part1/index.html
+++ b/www/tutorial-0.9/part1/index.html
@@ -131,6 +131,11 @@ list. We can make changes to the display widget simply by making changes to its
 source list. Should we decide to display our issues in a different widget such as a
 <code>JTable</code> or <code>JComboBox</code>, that is now easy as well.
 
+<br><br><p><table cellpadding="0" cellspacing="0" width="100%" border="0"><tr>
+<th align="left" width="30%"><br></th> 
+<th align="center" width="40%"><a href="../index.html">Tutorial Home</a></th>
+<th align="right" width="30%"><a href="../part2/index.html">Part 2 &gt;&gt;</a></th>
+</tr></table><br><br><br>
 
 </div>
 </body>
