--- a/www/tutorial-0.9/part2/index.html
+++ b/www/tutorial-0.9/part2/index.html
@@ -153,6 +153,11 @@ column's value. If your column's value is not <code>Comparable</code>, you
 <h3>So What?</h3>
 <p>We have constructed a <code>JTable</code> with a simple and elegant API.
 
+<br><br><p><table cellpadding="0" cellspacing="0" width="100%" border="0"><tr>
+<th align="left" width="30%"><a href="../part1/index.html">&lt;&lt; Part 1</a></th> 
+<th align="center" width="40%"><a href="../index.html">Tutorial Home</a></th>
+<th align="right" width="30%"><a href="../part3/index.html">Part 3 &gt;&gt;</a></th>
+</tr></table><br><br><br>
 
 
 </div>
