--- a/www/tutorial-0.9/part3/index.html
+++ b/www/tutorial-0.9/part3/index.html
@@ -75,6 +75,12 @@ to our panel.
 <p>We have added filtering to our issue browser without having
 to be concerned with sorting, display or changes to the source list. 
 
+<br><br><p><table cellpadding="0" cellspacing="0" width="100%" border="0"><tr>
+<th align="left" width="30%"><a href="../part2/index.html">&lt;&lt; Part 2</a></th> 
+<th align="center" width="40%"><a href="../index.html">Tutorial Home</a></th>
+<th align="right" width="30%"><a href="../part4/index.html">Part 4 &gt;&gt;</a></th>
+</tr></table><br><br><br>
+
 
 
 </div>
