--- a/www/tutorial-0.9/part4/index.html
+++ b/www/tutorial-0.9/part4/index.html
@@ -145,6 +145,11 @@ then performed a transformation on the derived user list to create a third list
 whose elements are unique. We have shown an example of how chaining list
 transformations is an easy way to create a sophisticated user interface.
 
+<br><br><p><table cellpadding="0" cellspacing="0" width="100%" border="0"><tr>
+<th align="left" width="30%"><a href="../part3/index.html">&lt;&lt; Part 3</a></th> 
+<th align="center" width="40%"><a href="../index.html">Tutorial Home</a></th>
+<th align="right" width="30%"><a href="../part5/index.html">Part 5 &gt;&gt;</a></th>
+</tr></table><br><br><br>
 
 </div>
 </body>
