--- a/www/tutorial-0.9/part5/index.html
+++ b/www/tutorial-0.9/part5/index.html
@@ -147,6 +147,11 @@ public class IssuesUserFilter <font color="#FF3333">extends AbstractFilterList</
 filter. We used a convenience list from the selection model and previewed
 the concurrency facilities within Glazed Lists.
 
+<br><br><p><table cellpadding="0" cellspacing="0" width="100%" border="0"><tr>
+<th align="left" width="30%"><a href="../part4/index.html">&lt;&lt; Part 4</a></th> 
+<th align="center" width="40%"><a href="../index.html">Tutorial Home</a></th>
+<th align="right" width="30%"><br></th>
+</tr></table><br><br><br>
 
 </div>
 </body>
