revised nonav page Issue number: Obtained from: Submitted by: Reviewed by:
git-svn-id: https://svn.java.net/svn/glazedlists~svn/trunk@265 696c4f5c-992c-4387-df9e-f6c076136008

--- a/www/home.html
+++ b/www/home.html
@@ -30,18 +30,24 @@
 
 
 
-  <div class="toolgroup" id="projecttools">
+  <div class="toolgroup" id="inaction">
     <div class="label"><strong>In Action</strong></div>
     <div class="body">
       <div><a href="/sightings/index.html">Screenshots</a></div>
       <div><a href="/demo.html">Demo Applet</a></div>
     </div>
+  </div>
+
+  <div class="toolgroup" id="downloads">
     <div class="label"><strong>Downloads</strong></div>
     <div class="body">
       <div><a href="/files/documents/1073/1671/glazedlists.jar">Latest .jar</a></div>
       <div><a href="/files/documents/1073/3455/glazedlists-source.zip">Latest source</a></div>
       <div><a href="/source/browse/glazedlists/">CVS</a></div>
     </div>
+  </div>
+
+  <div class="toolgroup" id="documentation">
     <div class="label"><strong>Documentation</strong></div>
     <div class="body">
       <div><a href="/tutorial-0.9/index.html">Tutorial</a></div>
@@ -52,7 +58,9 @@
       <div><a href="/issues/buglist.cgi?issue_status=UNCONFIRMED&issue_status=NEW&issue_status=STARTED&issue_status=REOPENED&issue_status=RESOLVED&issue_status=VERIFIED">Open issues</a></div>
       <div><a href="http://www.opensource.org/licenses/bsd-license.html">BSD License</a></div>
     </div>
+  </div>
 
+  <div class="toolgroup" id="search">
     <form action="https://glazedlists.dev.java.net/servlets/Search;jsessionid=535003B22735BD1A090FD5EA2E52560F" method="get">
     <div id="searchbox" class="toolgroup">
       <div class="label"><strong>Search</strong></div>
@@ -66,7 +74,9 @@
       </div>
     </div>
     </form>
+  </div>
 
+  <div class="toolgroup" id="javanetlinks">
     <div class="label"><strong>java.net</strong></div>
     <div class="body">
       <div><a href="http://community.java.net/javadesktop/">JavaDesktop</a></div>
@@ -78,7 +88,7 @@
 
 
 
-<div class="strut">&nbsp;</div>
+<!--<div class="strut">&nbsp;</div>-->
 </td>
 <td>
 
