--- a/www/home.html
+++ b/www/home.html
@@ -1,6 +1,4 @@
-
-
- <!DOCTYPE html PUBLIC "-//Tigris//DTD XHTML 1.0 Transitional//EN"
+<!DOCTYPE html PUBLIC "-//Tigris//DTD XHTML 1.0 Transitional//EN"
 "http://style.tigris.org/tigris_transitional.dtd">
 <html>
 <head>
@@ -13,11 +11,13 @@
    <script src="/branding/scripts/tigris.js" type="text/javascript"></script>
 </head>
 
-<body onload="loginfocus()" marginwidth="0" marginheight="0" class="composite">
+<body marginwidth="0" marginheight="0" class="composite">
 
 <div>
 
-<table border="0" cellpadding="0" cellspacing="0" width="100%" height="25" style="background:url(/branding/images/header_jnet_bg.gif);"><tr><td width="100%" rowspan="2"><a href="http://www.java.net"><img src="/branding/images/header_jnet.gif" width="520" height="53" border="0" alt="The Source for Java Technology Collaboration"></a></td></tr></table>
+<!-- java.net banner -->
+<table border="0" cellpadding="0" cellspacing="0" width="100%" height="25" style="background:url(/branding/images/header_jnet_bg.gif);"><tr><td width="100%"><a href="http://www.java.net"><img src="/branding/images/header_jnet.gif" width="520" height="53" border="0" alt="The Source for Java Technology Collaboration"></a></td></tr>
+<tr><td width="100%" style="background:color:#594dbf;color:#FFFFFF"><h1>Glazed Lists</h1></td></tr></table>
 
 <div class="space"></div>
 
