--- a/www/home.html
+++ b/www/home.html
@@ -16,8 +16,8 @@
 <div>
 
 <!-- java.net banner -->
-<table border="0" cellpadding="0" cellspacing="0" width="100%" height="25" style="background:url(/branding/images/header_jnet_bg.gif);"><tr><td width="100%"><a href="http://www.java.net"><img src="/branding/images/header_jnet.gif" width="520" height="53" border="0" alt="The Source for Java Technology Collaboration"></a></td></tr>
-<tr><td width="100%" style="background:color:#594dbf;color:#FFFFFF"><h1>Glazed Lists</h1></td></tr></table>
+<table border="0" cellpadding="0" cellspacing="0" width="100%" height="25" style="background:url(/branding/images/header_jnet_bg.gif);"><tr><td width="100%"><a href="http://www.java.net"><img src="/branding/images/header_jnet.gif" width="520" height="53" border="0" alt="The Source for Java Technology Collaboration"></a></td></tr></table>
+<h1>Glazed Lists</h1>
 
 <div class="space"></div>
 
@@ -98,7 +98,6 @@
 
 <div class="h3" id="longdescription">
 
-<h1>Glazed Lists</h1>
 <h3>A better way to browse lists</h3>
 <p>Suppose you have a list of 1,000 objects to browse. With Glazed Lists, you can:
 <p><strong>Sort</strong> the list by whichever criterea you specify via either of the Comparable or Comparator interfaces. Sorting criteria can be changed as necessary by the user.
