--- a/www/home.html
+++ b/www/home.html
@@ -17,10 +17,8 @@
 
 <!-- java.net banner -->
 <table border="0" cellpadding="0" cellspacing="0" width="100%" height="25" style="background:url(/branding/images/header_jnet_bg.gif);"><tr><td width="100%"><a href="http://www.java.net"><img src="/branding/images/header_jnet.gif" width="520" height="53" border="0" alt="The Source for Java Technology Collaboration"></a></td></tr></table>
-<h1>Glazed Lists</h1>
-
-<div class="space"></div>
-
+<!-- glazed lists banner -->
+<table border="0" cellpadding="4" cellspacing="0" width="100%"><tr><td><h1>Glazed Lists</h1></td></tr></table>
 
 <!-- sidebar table -->
 <table border="0" cellspacing="0" cellpadding="4" width="100%" id="main">
