--- a/www/home.html
+++ b/www/home.html
@@ -20,13 +20,9 @@
 <!-- glazed lists banner -->
 <table border="0" cellpadding="4" cellspacing="0" width="100%"><tr><td><h1>Glazed Lists</h1></td></tr></table>
 
-<!-- sidebar table -->
+<!-- navigation column -->
 <table border="0" cellspacing="0" cellpadding="4" width="100%" id="main">
-<tr valign="top"><td id="leftcol" width="20%">
-
-<div id="navcolumn">
-
-
+<tr valign="top"><td id="leftcol" width="20%"><div id="navcolumn">
 
   <div class="toolgroup" id="inaction">
     <div class="label"><strong>In Action</strong></div>
@@ -87,13 +83,11 @@
 
 
 </td>
-<td>
 
-<div id="bodycol">
-<div id="projecthome" class="app">
-
-
-<div class="h3" id="longdescription">
+<!-- content column -->
+<td><div id="bodycol">
+<!--<div id="projecthome" class="app">-->
+<!--<div class="h3" id="longdescription">-->
 
 <h3>A better way to browse lists</h3>
 <p>Suppose you have a list of 1,000 objects to browse. With Glazed Lists, you can:
@@ -178,7 +172,7 @@ and the JTable is updated. There are also models for <code>JList</code> and <cod
 </tr>
 </table>
 
-<div id="footer">&nbsp;<a href="http://today.java.net/pub/q/java_net_rss"><img src="/branding/images/xml.gif" border="0" width="36" height="14" alt="XML" align="absmiddle"></a>&nbsp;<b>java.net RSS</b><br /><br />
+<div id="footer">
 <table border="0" cellspacing="0" cellpadding="4"><tr><td><a href="http://www.collab.net/special/clickpbc0502.html" target="collab"><img src="/branding/images/poweredby_036.gif" alt="This site is Powered by CollabNet." id="poweredby" width="102" height="38" border="0" /></a></td><td>
   <a href="http://java-net.dev.java.net/feedback.html"  onclick="return launch(this.href, 1)" title="Note: link may open in new window" class="helplink">Feedback</a>   |
   <a href="http://java.net/faq.csp">FAQ</a> | <a href="http://java.net/presscenter/">Press</a> |
