--- a/www/home.html
+++ b/www/home.html
@@ -85,8 +85,8 @@
 </td>
 
 <!-- content column -->
-<td><div id="bodycol">
-<!--<div id="projecthome" class="app">-->
+<td><!--<div id="bodycol">-->
+<div id="projecthome" class="app">
 <!--<div class="h3" id="longdescription">-->
 
 <h3>A better way to browse lists</h3>
