--- a/www/home.html
+++ b/www/home.html
@@ -11,9 +11,7 @@
    <script src="/branding/scripts/tigris.js" type="text/javascript"></script>
 </head>
 
-<body marginwidth="0" marginheight="0" class="composite">
-
-<div>
+<body marginwidth="0" marginheight="0" class="composite"><div>
 
 <!-- java.net banner -->
 <table border="0" cellpadding="0" cellspacing="0" width="100%" height="25" style="background:url(/branding/images/header_jnet_bg.gif);"><tr><td width="100%"><a href="http://www.java.net"><img src="/branding/images/header_jnet.gif" width="520" height="53" border="0" alt="The Source for Java Technology Collaboration"></a></td></tr></table>
@@ -81,13 +79,8 @@
 </div>
 
 
-
-</td>
-
 <!-- content column -->
-<td><!--<div id="bodycol">-->
-<div id="projecthome" class="app">
-<!--<div class="h3" id="longdescription">-->
+</td><td><div id="projecthome" class="app">
 
 <h3>A better way to browse lists</h3>
 <p>Suppose you have a list of 1,000 objects to browse. With Glazed Lists, you can:
@@ -161,17 +154,10 @@ and the JTable is updated. There are also models for <code>JList</code> and <cod
   are planned.
 </ul>
 
-</p>
-</div>
 
+</div></td></tr></table>
 
-
-</div>
-</div>
-</td>
-</tr>
-</table>
-
+<!-- footer -->
 <div id="footer">
 <table border="0" cellspacing="0" cellpadding="4"><tr><td><a href="http://www.collab.net/special/clickpbc0502.html" target="collab"><img src="/branding/images/poweredby_036.gif" alt="This site is Powered by CollabNet." id="poweredby" width="102" height="38" border="0" /></a></td><td>
   <a href="http://java-net.dev.java.net/feedback.html"  onclick="return launch(this.href, 1)" title="Note: link may open in new window" class="helplink">Feedback</a>   |
@@ -186,5 +172,6 @@ and the JTable is updated. There are also models for <code>JList</code> and <cod
 </tr></table></div>
 
 
+</div>
 </body>
 </html>
