--- a/www/home.html
+++ b/www/home.html
@@ -15,8 +15,6 @@
 
 <!-- java.net banner -->
 <table border="0" cellpadding="0" cellspacing="0" width="100%" height="25" style="background:url(/branding/images/header_jnet_bg.gif);"><tr><td width="100%"><a href="http://www.java.net"><img src="/branding/images/header_jnet.gif" width="520" height="53" border="0" alt="The Source for Java Technology Collaboration"></a></td></tr></table>
-<!-- glazed lists banner -->
-<table border="0" cellpadding="4" cellspacing="0" width="100%"><tr><td><h1>Glazed Lists</h1></td></tr></table>
 
 <!-- navigation column -->
 <table border="0" cellspacing="0" cellpadding="10" width="100%" id="main">
@@ -81,6 +79,8 @@
 
 <!-- content column -->
 </td><td><div id="projecthome" class="app">
+
+<h1>Glazed Lists</h1>
 
 <h3>A better way to browse lists</h3>
 <p>Suppose you have a list of 1,000 objects to browse. With Glazed Lists, you can:
