--- a/www/home.html
+++ b/www/home.html
@@ -17,7 +17,7 @@
 <table border="0" cellpadding="0" cellspacing="0" width="100%" height="25" style="background:url(/branding/images/header_jnet_bg.gif);"><tr><td width="100%"><a href="http://www.java.net"><img src="/branding/images/header_jnet.gif" width="520" height="53" border="0" alt="The Source for Java Technology Collaboration"></a></td></tr></table>
 
 <!-- navigation column -->
-<table border="0" cellspacing="0" cellpadding="10" width="100%" id="main">
+<table border="0" cellspacing="0" cellpadding="10" width="100%">
 <tr valign="top"><td id="leftcol" width="20%"><div id="navcolumn">
 
   <div class="toolgroup" id="inaction">
