--- a/www/index.html
+++ b/www/index.html
@@ -3,6 +3,6 @@
 <meta http-equiv="Refresh" content="0; URL=/nonav/home.html"/>
 <body>
 
-<a href="/nonav/home.html"><h1>Glazed Lists</h1></a>
+<a href="/nonav/home.html">Glazed Lists is getting a new homepage... click here.</a>
 
 </body></html>
