--- a/www/demo.html
+++ b/www/demo.html
@@ -1,24 +1,24 @@
 <html>
-<head><title>Programming Language Browser Demo</title></head>
+<head><title>Issues Browser Demo</title></head>
 <body>
 <div class="app">
 
-<h1>Programming Language Browser Demo</h1>
+<h1>Issues Browser Demo</h1>
 
-<p>The programming language browser is a very simple application that
-demonstrates Glazed Lists' filtering, sorting and custom renderers.
-This is the project constructed in the <a href="/tutorial/index.html">tutorial</a>.
+<p>The issues browser is a very simple application that
+demonstrates Glazed Lists' filtering, sorting and transformation lists.
+This is the project constructed in the <a href="/tutorial-0.9/index.html">tutorial</a>.
 
-<p><object classid="clsid:CAFEEFAC-0014-0002-0000-ABCDEFFEDCBA"
+<p><object classid="clsid:CAFEEFAC-0014-0000-0000-ABCDEFFEDCBA"
     codebase="http://java.sun.com/products/plugin/autodl/jinstall-1_4_2-windows-i586.cab#Version=1,4,2,0"
     width="400" height="300">
-    <param name="code" value="ca.odell.glazedlists.demo.ProgrammingLanguageBrowser">
+    <param name="code" value="ca.odell.glazedlists.demo.IssuesBrowser">
     <param name="archive" value="/files/documents/1073/1671/glazedlists.jar">
-    <param name="type" value="application/x-java-applet;jpi-version=1.4.2">
+    <param name="type" value="application/x-java-applet;jpi-version=1.4">
 
     <comment>
-        <embed type="application/x-java-applet;jpi-version=1.4.2"
-            code="ca.odell.glazedlists.demo.ProgrammingLanguageBrowser"
+        <embed type="application/x-java-applet;jpi-version=1.4"
+            code="ca.odell.glazedlists.demo.IssuesBrowser"
             archive="/files/documents/1073/1671/glazedlists.jar" width="400" height="300" scriptable="false"
             pluginspage="http://java.sun.com/products/plugin/index.html#download">
             <noembed></noembed>
