die die die old tutorial Issue number: Obtained from: Submitted by: Reviewed by:
git-svn-id: https://svn.java.net/svn/glazedlists~svn/trunk@298 696c4f5c-992c-4387-df9e-f6c076136008

--- a/www/glazedlists-0.9.1/index.html
+++ b/www/glazedlists-0.9.1/index.html
@@ -5,8 +5,7 @@
 <h1>Glazed Lists 0.9.1 Release Notes</h1>
 
 <p>Glazed Lists 0.9.1 is a minor release of Glazed Lists. This release provides several
-bugfixes to Glazed Lists 0.9. This release coincides with the release of the revised
-Glazed Lists tutorial. 
+bugfixes to Glazed Lists 0.9. It also includes a revised tutorial. 
 
 <p>The only API change between this release and the previous release is that
 TextFilterable/TextFilterator now use Lists instead of String arrays.
@@ -41,6 +40,7 @@ for migrating from Glazed Lists 0.8.
 <table border="1" cellspacing="0" cellpadding="4">
 <tr><th>ID</th><th>Description</th></tr>
 <tr><td><a href="https://glazedlists.dev.java.net/issues/show_bug.cgi?id=61">61</a><td>SetEnabled(boolean) on EventSelectionModel</td></tr>
+<tr><td><a href="https://glazedlists.dev.java.net/issues/show_bug.cgi?id=63">63</a><td>EventLists don't get garbage collected unless source list is garbage collected</td></tr>
 </table>
 
 <h3>License</h3>
