--- a/www/project_tools.html
+++ b/www/project_tools.html
@@ -9,6 +9,7 @@
     <div><a href="https://glazedlists.dev.java.net/glazedlists-demo.jnlp">Demo Web Start</a></div>
     <div><a href="http://publicobject.com/glazedlists/sightings/index.html">Screenshots</a></div>
   </div>
+</div>
        
 <div id="projecttools" class="toolgroup">
   <div class="label"><strong>Documentation</strong></div>
