--- a/source/ca/odell/glazedlists/demo/package.html
+++ b/source/ca/odell/glazedlists/demo/package.html
@@ -37,14 +37,16 @@ public static void main( String[] args ) {
 </pre>
 </li>
 
-<li>Add the following to <tt>demos.properties</tt>:
+<li>Add the following to <tt>launcher.properties</tt> (in the resources/demo directory):
 <ol>
-<li>A property (for example: "aaa") to <tt>demos.properties</tt> with the display name
-of the class.</li>
-<li>(Optional) A property with the name from the previous step followed by ".desc" (for
-example: "aaa.desc") containing a description of the demo.</li>
+<li>A property (for example: "aaa") with the display name of the class.</li>
 <li>A property with the name from step 1 followed by ".class" (for example: "aaa.class")
 containing the name of the class containing the main method for the demo.</li>
+<li>(Optional) A property with the name from the previous step followed by ".desc" (for
+example: "aaa.desc") containing a description of the demo.</li>
+<li>(Optional) If the demo requires SWT, add a property with the name from the pervious
+step followed by ".requires_swt" (for example: "aaa.requires_swt"). No value is necessary,
+any value for the property will indicate the SWT is required.
 </ul>
 </body>
 </html>
