--- a/source/ca/odell/glazedlists/matchers/package.html
+++ b/source/ca/odell/glazedlists/matchers/package.html
@@ -1,7 +1,7 @@
 <html>
 <body>
 Implementations and classes useful for creating implementations of
-{@link ca.odell.glazedlists.matchers.MatcherEditor MatcherEditor}/{@link ca.odell.glazedlists.Matcher Matchers}
+{@link ca.odell.glazedlists.matchers.MatcherEditor MatcherEditor}/{@link ca.odell.glazedlists.matchers.Matcher Matchers}
 for use with {@link ca.odell.glazedlists.FilterList FilterLists}.
 </body>
 </html>
